Fixed layout issues and updated css styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,6 +161,9 @@ h6 {
   margin: 15px auto;
   display: block;
   width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
   border: 8px solid color-mix(in srgb, var(--default-color), transparent 85%);
 }
 
